# solahaw

./: .gitignore  Cargo.toml  makefile
src/: anchor_idl.rs  main.rs
