[package]
name = "solahaw"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.17.1"
solana-client = "1.17.1"
solana-program = "1.17.1"
solana-account-decoder = "1.17.1"
borsh = "1.5.5"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10.8"
hex = "0.4.3"
